incidents/static/custom_css/fir.css
/* ... */
/* Search  ------------------------------------*/

.search-results {
	margin-top:-5px;
	margin-bottom:20px;
}

.icon-search {
	margin: 3px 9px 0 5px;
}

/* Navbar  --------------------------------------*/

#header-collapse {
	padding: 4px 5px;
}

.table-responsive {
	border: none;
}

/* Main  --------------------------------------*/

body {
	font-size: 12px;
	line-height: 20px;
	padding-top: 60px;
	padding-bottom: 40px;
}

table.fixed {
	table-layout: fixed;
	overflow-wrap: break-word;
}

table.fixed td {
	width: auto;
}

.icon-column {
	width: 25px;
	text-align: center;
}

.date-column {
	width: 100px;
}

.nav .caret {
	border-top-color: #fff !important;
	border-bottom-color: #fff !important;
}

input.search {
	background-color:black;
	color:#DDD;
	border:1px solid #333;
}


#push, #footer {
	height:60px;
}

footer {
	background-color:#EEE;
	padding:2px;
	position:fixed;
	bottom:0;
	left:0;
	width:100%;
}

footer div {
	color:#555;
	font-size:10px;
	margin:0 auto;
	width:560px;
}

.container {
	min-height: 100%;
	height: auto !important;

}

.usergreet {
	float:right;
	color:#999;
	padding:10px 15px 10px;
}

.usergreet a {
	color:#999;
}

a .glyphicon {
	color: black;
}

a, 
button.nav-link, 
.btn-link,
button.bi {
	color: var(--bs-info-text-emphasis);
	text-decoration-line: none;
}

a:hover, 
button.nav-link:hover, 
.btn-link:hover {
	text-decoration-line: underline;
}

.btn-default {
	border-color: var(--bs-info-text-emphasis);
}

.btn-default:hover {
	background-color: var(--bs-info-text-emphasis);
	text-decoration-line: none;
	color: var(--bs-light);
}


/* Detail -------------------------------------*/

#addComment label {
	padding-top: 3px;
	display: block;
}

#sendEmail .form-horizontal .control-group {
 margin-bottom: 0px;
}

#sendEmail input[type="text"] {
	padding: 1px 3px
}

/* Email Modal */

#sendEmail input {
	width:98%;
}

#sendEmail .form-horizontal .controls {
	margin-left: 50px;
}

#sendEmail .form-horizontal .control-label {
	width: 40px;
}

/* break long words in artifacts */
.artifacts {
	word-wrap: break-word;
}

table .artifacts {
	max-width:1000px;
}

.comment-date {
	width: 120px;
}

.side-tables {
	width:47%;
	float:left;
}

.artifacts-table .head {
	text-align: right;
	width: 100px;
}

.artifacts-table a.multiple {
	color:rgb(235, 34, 34);
}

h1.float {
	float:left;
}

#incident-properties {
	margin-top: -20px;
	margin-left: calc(var(--bs-gutter-x) * -0.5);
	margin-right: calc(var(--bs-gutter-x) * -0.5)
}

#incident-properties .minitable {
	margin: 0;
	width: auto;
}

#incident-sidebar {
	margin-top: 30px;
}

.minitable .slim td {
	border-top:none;
	vertical-align: middle;
	line-height: 1;
}

.minitable .delim {
	border-right: 1px solid; 
	padding-right: 15px;
}

.minitable .head {
	font-weight: bold;
	padding-left: 15px;
}

div.widget {
	border: 1px solid #CCC;
	border-radius: 3px;
	padding: 10px;
	margin-bottom: 10px;
}

div.widget h4.widget {
	padding-left: 10px;
	background-color: #EBFAFF;
	padding: 5px;
	padding-left: 10px;
	margin: 0;
	border-bottom: 1px solid #CCC;
	font-size: 12px;
	margin-left: -11px;
	margin-top: -11px;
	margin-right: -11px;
	margin-bottom: 5px;
	border: 1px solid LightSkyBlue;
	border-radius: 3px 3px 0 0;
}

div#description h4.widget {
	background-color: LightSkyBlue;
	border-color: #337ab7;
}

div#attributes input {
	width: 90%;
}

div#attributes select {
	width: auto;
}

div#main_tabs {
	margin-top: 10px;
	font-weight: bold;
}

#details-container {
	margin-bottom: 55px;
}

#details-actions-all {
	position: fixed;
	left: 0;
	right: 0;
	bottom: 0px;
	z-index: 1035;
}

@media (min-width: 768px) {
	#details-actions-all {
		bottom: 24px;
	}
}

#details-actions,
.details-actions-supmenu {
	padding-left: 15px;
	padding-right: 15px;
}

#details-actions ul,
.details-actions-supmenu ul {
	margin: 0;
}

#details-actions {
	background-color: LightSkyBlue;
}

.details-actions-supmenu {
	border-bottom: 1px solid #337ab7;
	background-color: #98DFFB;
}

#details-actions li,
.details-actions-supmenu li {
	display: inline-block;
	margin-right: 10px;
	margin-top: 5px;
	margin-bottom: 5px;
	white-space: nowrap;
}

#details-actions .glyphicon,
.details-actions-supmenu .glyphicon {
	color: white;
	margin-right: 5px;
}

#details-actions a,
.details-actions-supmenu a {
	color: #2269a6;
	text-decoration: none;
}

#details-actions a:hover,
.details-actions-supmenu a:hover {
	color: white;
	text-decoration: none;
}

#details-actions a:hover>.glyphicon,
.details-actions-supmenu a:hover>.glyphicon {
	color: #2269a6;
}

#add-comment-line:hover td {
	background-color: none;
}

/* Index --------------------------------------*/

.container, .navbar-static-top .container, .navbar-fixed-top .container, .navbar-fixed-bottom .container {
	width: 99% !important;
}

tr .icon-star-empty {
	opacity: 0.3;
}


.label, .badge {
	font-size: 11.84px;
}
.table th {
	border-top:0;
}

tr.dynamic-status-final {
	opacity: 0.3
}

.incident_display tr.dynamic-status td  {
	color: #f00;
	background-color:#fdd;
	font-weight:bold;
}

.incident_display tr.dynamic-status td a {
	color: rgb(31, 105, 121)!important;
}

td.incident_date_column {
	width: 85px;
}

.nothing_to_show {
	margin-bottom: 15px;
}

/* New incident -------------------------------*/

.labels-ontop label {
	display: block;
}

.collapse.in {
	overflow: visible;
}

div#concerned_business_lines {
	min-width: 200px;
}

.aligned-with-stack {
	margin-top: 30px !important;
}

.header h1{
	margin-top: 0;
}

.help-inline
{
	clear:both;
}

legend.border-bottom {
	padding-bottom: 7px;
}

/* Adapt select2 to be compatible with bootstrap light themes -------------------------------------*/

.select2-search-choice {
	background-image: linear-gradient(to bottom, #DEE7F8, #DEE7F8) !important;
}

body .select2-container--bootstrap-5 .select2-selection {
    color: var(--bs-body-color);
    background-color: var(--bs-body-bg);
    border: var(--bs-border-width) solid var(--bs-border-color);
}
/* ... */

